because of the letters and numbers i added to each board now i have a bug that offsets the placement of ships by one. when i click a cell it appears on a cell that is a row and column behind. somewhere the logic and dom is communicating but its not accounting for the offset. I implemented a color palette for the whole project. Tomorrow we finish

--- a/src/gameType.css
+++ b/src/gameType.css
@@ -4,7 +4,7 @@
   position: absolute;
   height: 500px;
   width: 600px;
-  background-color: maroon;
+  background-color: #6B9AC4;
   z-index: 10;
   font-family: "byteFont", Arial, Helvetica, sans-serif;
   color: antiquewhite;
@@ -49,12 +49,12 @@ input + svg {
 input[class="pvp"]:hover + svg,
 input[class="pvp"]:checked + svg,
 input[class="pvp"]:focus + svg {
-  fill: rgb(0, 109, 217);
+  fill: #F05d23;
 }
 input[class="pve"]:hover + svg,
 input[class="pve"]:checked + svg,
 input[class="pve"]:focus + svg {
-  fill: rgb(0, 204, 79);
+  fill: #E3B505;
 }
 
 .buttonCont {
@@ -67,7 +67,7 @@ button {
 
 .submitButton:hover,
 .closeButton:hover {
-  background-color: black;
+  background-color: #E3B505;
   color: antiquewhite;
 }
 .submitButton:active,
